cambios en la se;a

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -249,8 +249,14 @@
   </div>
   {% endblock %}
 
+  <!-- CSS de Select2 -->
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+  <!-- JS de Select2 -->
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
   <script src="{% static 'third-party/js/jquery.min.js' %}"></script>
 
