--- a/servicios/templates/servicios/servicio_confirm_seña.html
+++ b/servicios/templates/servicios/servicio_confirm_seña.html
@@ -11,7 +11,7 @@
 {% block p %}
     La seña del servicio requerida es de: {{seña}}
 
-    ¿El cliente realizo la seña de 
+    ¿El cliente realizo la seña del servicio
 {% endblock %}
 
 {% block object %}
