--- a/core/templates/inmuebles/inmueble_form.html
+++ b/core/templates/inmuebles/inmueble_form.html
@@ -13,6 +13,47 @@
 {% comment %}{% block btnform %} Guardar {% endblock %}{% endcomment %}
 {% block extrajs %}
 
+<!-- Select2 CSS -->
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+
+<!-- jQuery y Select2 JS -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css" rel="stylesheet" />
+
+<script>
+  $(document).ready(function() {
+    $('.select2-cliente').select2({
+      width: '100%',
+	  theme: 'bootstrap-5',
+	  language: {
+        inputTooShort: function(args) {
+          return 'Escribí al menos 1 carácter para buscar un cliente (Nombre, Correo, Cuil-Cuit)'; // 💬 tu mensaje personalizado
+        }
+      },
+      ajax: {
+        url: "{% url 'buscar_clientes' %}",  // Asegurate de tener esta URL
+        dataType: 'json',
+        delay: 250,
+        data: function (params) {
+          return {
+            term: params.term
+          };
+        },
+        processResults: function (data) {
+          return {
+            results: data.results
+          };
+        },
+        cache: true
+      },
+      placeholder: 'Buscar cliente por nombre o DNI',
+      minimumInputLength: 1
+    });
+  });
+</script>
+
+
 <script type="text/javascript">
 $(function() {
   	
@@ -31,5 +72,7 @@ $(function() {
 })
 
 </script>
+
+
 
 {% endblock %}
